[metadata]
name = webapp_photo_luminescence
version = attr: webapp_photo_luminescence.__version__
author = Shuhei Nitta
author_email = huisintheta@gmail.com
url = https://github.com//Waseda-TakeuchiLab/webapp-photo-luminescence
description = Web Application for Photo Luminescence Measurement
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
test_suite = tests
install_requires = 
    dash>=2.5.1
    dash_bootstrap_components>=1.2.0
    plotly>=5.9.0
    pandas>=1.4.3
    opencv-python>=4.6.0
    tlab_analysis@git+https://github.com/Waseda-TakeuchiLab/tlab-analysis@v0.0.1

[options.packages.find]
exclude = 
    test*

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict = True
disallow_untyped_decorators = False

[coverage:run]
omit =
    tests/*

[flake8]
max-line-length = 119

